Fixed some alignments for mobile view in menu.css

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -93,6 +93,7 @@ h2 {
 }
 
 .column-left {
+	padding-left: 30px;
 	margin-top: 50px;
 	float: left;
 	width: 33%;
@@ -100,6 +101,7 @@ h2 {
 }
 
 .column-middle {
+	padding-left: 30px;
 	margin-top: 50px;
 	float: left;
 	width: 33%;
@@ -107,6 +109,8 @@ h2 {
 }
 
 .column-last {
+	padding-left: 30px;
+	padding-right: 15px;
 	margin-top: 50px;
 	float: left;
 	width: 33%;
@@ -123,7 +127,6 @@ h2.title-block {
 
 span.menu-item {
 	font-size: 24px;
-	margin-left: 30px;
 	font-weight: bold;
 	text-transform: uppercase;
 	padding-right: 10px;
@@ -136,7 +139,6 @@ span.price {
 
 span.side-item {
 	font-size: 18px;
-	margin-left: 30px;
 	font-weight: bold;
 	text-transform: uppercase;
 	padding-right: 10px;
@@ -148,7 +150,6 @@ span.side-price {
 }
 
 p.food-menu {
-	margin-left: 30px;
 	margin-bottom: 20px;
 	margin-right: 10px;
 }
@@ -178,11 +179,11 @@ img.burger {
 
 @media only screen and (max-width: 990px) {
 	
-	span.menu-item {
+	span.menu-item, span.side-item {
 		font-size: 16px;
 	}	
 	
-	span.price {
+	span.price, span.side-price {
 		font-size: 16px;
 	}
 	
@@ -227,13 +228,12 @@ img.burger {
 	.column-left, .column-middle, .column-last {
 		width: 100%;
 		padding-right: 10px;
-	}
-	
-	.column-middle {
 		border: 0px;
 	}
 	
-	.column-last {
-		border-right: solid 2px black;
+	.column-middle, .column-left {
+		border-bottom: 2px solid black;
 	}
 }
+	
+	
